@@ -90,6 +90,10 @@ dpkg (1.13.12) experimental; urgency=low
   * Add support for architecture wildcards, but for now they will only be
     exposed in debian/control files, not in binary nor source packages.
     Closes: #291939
+  * Change start-stop-daemon's --exec option behaviour on GNU/Linux to
+    compare the filename pointed by '/proc/<pid>/exe' instead of the inode
+    and device numbers. Thanks to Vasilis Vasaitis <v.vasaitis@sms.ed.ac.uk>.
+    Closes: #337942
 
  -- Frank Lichtenheld <djpig@debian.org>  Mon, 23 Jan 2006 14:22:59 +0100
 
